--- a/Server/Views/content/contact.ejs
+++ b/Server/Views/content/contact.ejs
@@ -1,1 +1,37 @@
-<h1>Contact Us</h1>
+<!--File name: contact.ejs, 
+  Student's name: Ofovwe Ewere
+  Student's id: 301188196
+  Date: June 4, 2021
+-->
+<div class="container">
+    <h1>Contact Me</h1>
+    <div class="panel panel-default">
+    <div class="panel-body">Ofovwe Ewere</div>
+    <div class="panel-body">email: ewereeman@gmail.com</div>
+    <div class="panel-body">phone number: +12042022189</div>
+  </div>
+  <div>
+  <form id="contact-form">
+        <div><input type="hidden" name="contact_number">
+        <label>Name</label></div>
+        
+        <input type="text" name="user_name">
+        <br>
+        <label>Email</label>
+        <div><input type="email" name="user_email"></div>
+        
+        <label>Message</label>
+        <div><textarea name="message"></textarea></div>
+        <form method="get" action="/home">
+        
+        </form>
+        
+
+        <button onclick="document.location='/home'">submit</button>
+    </form>
+    </div>
+  
+  
+  </div>
+  
+  
