--- a/Server/Views/content/projects.ejs
+++ b/Server/Views/content/projects.ejs
@@ -1,1 +1,19 @@
-<h1>Our Projects</h1>
+<!--File name: projects.ejs, 
+  Student's name: Ofovwe Ewere
+  Student's id: 301188196
+  Date: June 4, 2021
+-->
+<div class="container">
+    <h1>My Projects</h1>
+    <h2>Tappy Rover</h2>
+    <p>I am currently working on an android phone/tablet game application called Tappy rovers. Currently, I have implemented the game engine and also connected the game to the play store for google play services. I plan to work on my original images for the game in oder to avoid copyright issues</p>
+    <div><img img src="Assets/images/tappyrover.png"></div>
+
+    <h2>Recursive ray tracers research</h2>
+    <p>For my first degree, one of the most interesting project I worked on was a graphics recursive ray tracer algorithm. I plan to gain more understanding on this by carrying out  more research in the future.</p>
+    <div><img img src="Assets/images/graphics.png"></div>
+
+    <h2>Web application development training</h2>
+    <p>I am currently taking a web application development course at Centennial college in order to gain a deeper understanding of backend servers. This is a well sought out skill in the industry and so far, it is very challenging but interesting. </p>
+    <div><img img src="Assets/images/webapp.jpg"></div>
+  </div>
